--- a/H3.md
+++ b/H3.md
@@ -1,15 +1,21 @@
 
  
- ### x)
- Tero Karvisen sivuilla https://terokarvinen.com/2020/command-line-basics-revisited/?fromSearch=command%20line%20basics%20revisited löytyy katsaus Linuxin käyttöjärjestelmän eri komentoihin ja ominaisuuksiin.
+ ## x)
+
  
- Huomioita:
- * Linuxissa ollaan aina hakemiston sisällä
+ 
+ 
+ 
+### FSF
+* Linuxissa ollaan aina hakemiston sisällä
 * Pico ja Nano ovat hyviä tekstieditoreita
 * Linuxiin asennetaan ohjelmistoa pakettien avulla
+
+
+
  
- # 
- Harjoituksen tarkoituksena on tutustua Linuxin eri komentoihin ja hakemistoihin ja harjoitella niiden käyttöä. Tein harjoituksen omalla pöytäkoneella 22.01.2023
+ # H3
+ Harjoituksen tarkoituksena on tutustua Linuxin eri ohjelmien lisensseihin ja harjoitella pip- ja grep-komentoja. Tein harjoituksen omalla pöytäkoneella 25.01.2023
  
 
  
@@ -167,7 +173,9 @@ Komennoilla pääsin testaamaan eri ohjelmia
  
 ## Lähteet
 
-Command Line Basics Revisited, Tero Karvinen - 2020-02-03 (https://terokarvinen.com/2020/command-line-basics-revisited/?fromSearch=command%20line%20basics%20revisited)
+What is Free Software? (https://www.gnu.org/philosophy/free-sw.html)
+
+Välimäki 2005: Rise of Open Source: 5 Open Source Licenses as Alternative Governance Mechanisms: 5.1.1 - 5.1.4 (lib.tkk.fi/Diss/2005/isbn9529187793/isbn9529187793.pdf)
 
 How To Use grep Command In Linux / UNIX With Practical Examples,  Vivek Gite - 20.1.2023 (https://www.cyberciti.biz/faq/howto-use-grep-command-in-linux-unix/)
 
