--- a/H3.md
+++ b/H3.md
@@ -1,17 +1,27 @@
 
  
- ## x)
+ # x)
 
  
  
  
  
-### FSF
-* Linuxissa ollaan aina hakemiston sisällä
-* Pico ja Nano ovat hyviä tekstieditoreita
-* Linuxiin asennetaan ohjelmistoa pakettien avulla
+## FSF
 
+ FSF eli Free Software Foundation määrittää artikkelissaan "What is Free Software?" (https://www.gnu.org/philosophy/free-sw.html), mikä on ilmaisohjelma ja miten ilmaisohjelmia saa käyttää.
+ 
+* Ilmaisohjelma arvostaa sen käyttäjän vapautta ja yhteisöä
+* Ilmaisohjelmia saa käyttää miten itse haluaa ja mihin tarkoitukseen haluaa
+* Ilmaisohjelmien toimivuutta saa tutkia ja muuttaa omaan käyttötarkoitukseen sopivaksi 
+* Ilmaisohjelmia saa muuttaa ja jakaa eteenpäin
+* Ilmaisohjelmat voivat olla myös kaupallisia
 
+## Avoimen lähdekoodin lisenssit
+ Mikko Välimäki esittelee väitöskirjassaan "The rise of open source licensing" (lib.tkk.fi/Diss/2005/isbn9529187793/isbn9529187793.pdf) luvuissa 5.1.1 - 5.1.4 mitä avoimen lähdekoodin lisenssi pitää sisällään.
+
+* Avoimen lähdekoodin lisenssi hyväksyy kopioimisen, levittämisen ja modifikaation
+* Ohjelmiston lisensointi avoimen lähdekoodin lisenssillä ei kuitenkaan tarkoita, että ohjelma olisi tekijänoikeudeton
+* Avoimen lähdekoodin lisenssillä ei ole lisenssien yhteensopivuuden, takuiden tai muodollisuuksien suhteen vaatimuksia.
 
  
  # H3
@@ -32,20 +42,24 @@
 
 
 
-## Aloitin harjoituksen kello 11:08 asentamalla micro editorin
+## Aloitin harjoituksen kello 20:30 harjoituksessa H2 asentamien ohjelmien lisensseihin tutustumiseen
 
+### CMatrix
+ * Löysin ohjelman githubin reposition (https://github.com/abishekvashok/cmatrix/blob/master/README.md#license)
+ * Lisenssi: GNU GPL v3
+ * GNU GPL v3 on vapaa lisenssi
+ * Saa käyttää kaupallisesti ja yksityisesti
+ * Saa muokata ja jakaa
+ 
 
-       $ sudo apt-get update
-       
-  Komennolla ja salasanan syöttämällä sain haettua saatavilla olevat päivitykset
+### Cowsay
+ * Löysin ohjelman githubin reposition (https://github.com/tnalpgge/rank-amateur-cowsay)
+ * Lisenssi: GNU GPL v3
+ * GNU GPL v3 on vapaa lisenssi
+ * Saa käyttää kaupallisesti ja yksityisesti
+ * Saa muokata ja jakaa
 
-      $ apt-cache show micro
-      
-   Komennolla sain löydettyä micro editorin
-
-     $ sudo apt-get -y install micro
-     
-  Komennolla sain asennettua micro tekstieditorin
+### SL
      
 
  ## Seuraavaksi tutkin virtuaalikoneen ominaisuuksia (11:27)
