--- a/H3.md
+++ b/H3.md
@@ -45,7 +45,7 @@
 ## Aloitin harjoituksen kello 20:30 harjoituksessa H2 asentamien ohjelmien lisensseihin tutustumiseen
 
 ### CMatrix
- * Löysin ohjelman githubin reposition (https://github.com/abishekvashok/cmatrix/blob/master/README.md#license)
+ * Löysin ohjelman github reposition (https://github.com/abishekvashok/cmatrix/blob/master/README.md#license)
  * Lisenssi: GNU GPL v3
  * GNU GPL v3 on vapaa lisenssi
  * Saa käyttää kaupallisesti ja yksityisesti
@@ -53,14 +53,17 @@
  
 
 ### Cowsay
- * Löysin ohjelman githubin reposition (https://github.com/tnalpgge/rank-amateur-cowsay)
+ * Löysin ohjelman github reposition (https://github.com/tnalpgge/rank-amateur-cowsay)
  * Lisenssi: GNU GPL v3
  * GNU GPL v3 on vapaa lisenssi
  * Saa käyttää kaupallisesti ja yksityisesti
  * Saa muokata ja jakaa
 
 ### SL
-     
+  * Löysin ohjelman github reposition (https://github.com/mtoyoda/sl)
+  * Copyright 1993,1998,2014 Toyoda Masashi (mtoyoda@acm.org)
+  * Annetaan lupa kopioida, levittää ja muokata ohjelmaa
+  
 
  ## Seuraavaksi tutkin virtuaalikoneen ominaisuuksia (11:27)
  
