--- a/H3.md
+++ b/H3.md
@@ -65,9 +65,16 @@
   * Annetaan lupa kopioida, levittää ja muokata ohjelmaa
   
 
- ## Seuraavaksi tutkin virtuaalikoneen ominaisuuksia (11:27)
+ ## Seuraavaksi harjoittelin grep-komentoa käyttäen säännöllisiä lausekkeita (regular expressions) (21:31)
  
-  Hyödyntämällä viime tehtävän komentoja asensin LSHW ohjelman, jonka avulla pystyy tutkimaan käyttöjärjestelmän ominaisuuksia
+  Hyödyntämällä viime tehtävässä luomaani tekstitiedostoa 
+  
+  ![Add file: Upload](nanohello.PNG)
+  
+  ja komentoa 
+  
+     
+  
   
      $ sudo lshw -short -sanitize
      
