--- a/H3.md
+++ b/H3.md
@@ -67,9 +67,9 @@
 
  ## Seuraavaksi harjoittelin grep-komentoa käyttäen säännöllisiä lausekkeita (regular expressions) (21:31)
  
-  Hyödyntämällä viime tehtävässä luomaani tekstitiedostoa 
+  Luomalla tekstitiedoston 
   
-  ![Add file: Upload](nanohello.PNG)
+  ![Add file: Upload](hellogrep.PNG)
   
   ja komentoa 
   
