--- a/H3.md
+++ b/H3.md
@@ -25,7 +25,7 @@
 
  
  # H3
- Harjoituksen tarkoituksena on tutustua Linuxin eri ohjelmien lisensseihin ja harjoitella pip- ja grep-komentoja. Tein harjoituksen omalla pöytäkoneella 25.01.2023
+ Harjoituksen tarkoituksena on tutustua eri ohjelmien lisensseihin ja harjoitella pipe- ja grep-komentoja. Tein harjoituksen omalla pöytäkoneella 25.01.2023-26.01.2023
  
 
  
@@ -42,7 +42,7 @@
 
 
 
-## Aloitin harjoituksen kello 20:30 harjoituksessa H2 asentamien ohjelmien lisensseihin tutustumiseen
+## Aloitin harjoituksen 25.01.2023 kello 20:30 harjoituksessa H2 asentamien ohjelmien lisensseihin tutustumiseen
 
 ### CMatrix
  * Löysin ohjelman github reposition (https://github.com/abishekvashok/cmatrix/blob/master/README.md#license)
@@ -65,7 +65,7 @@
   * Annetaan lupa kopioida, levittää ja muokata ohjelmaa
   
 
- ## Seuraavaksi harjoittelin grep-komentoa käyttäen säännöllisiä lausekkeita (regular expressions) (21:31)
+ ## Seuraavaksi harjoittelin grep-komentoa käyttäen säännöllisiä lausekkeita (regular expressions) (klo 12:54 - 26.1.2023)
  
   Luomalla tekstitiedoston 
   
@@ -73,127 +73,30 @@
   
   ja komentoa 
   
+    $ grep -i -w 'hello'  hello
+    
+  Etsin kaikki hello-sanat tekstitiedostosta aakkoslajeja erottamattomasti.
      
   
-  
-     $ sudo lshw -short -sanitize
-     
-  Komennolla käynnistin lshw ohjelman ja listasin virtuaalikoneen ominaisuudet
-  
-  
-![Add file: Upload](LSHW.PNG)
-  
-  
-  Listauksessa näkyy, kuinka olin antanut virtuaalikoneelle 5 GB RAMia ja että virtuaalikone pyörii samalla prosessorilla, kuin pöytäkoneeni.
-  
-  ## Seuraavaksi asensin itselleni kolme mieluisaa komentorivi ohjelmaa (11:49)
-  
-  Valitisin ohjelmiksi cmatrix, cowsay ja sl
-  
-    $ sudo apt-get install cmatrix cowsay sl
-    
-  Komennolla asensin kaikki kolme ohjelmaa yhtäaikaa
-  
-     cmatrix
-     cowsay "hello"
-     sl
-     
-Komennoilla pääsin testaamaan eri ohjelmia
+  ![Add file: Upload](grepP.PNG)
 
-![Add file: Upload](cmatrix.PNG)
 
-![Add file: Upload](cowsay.PNG)
+## Seuraavaksi kokeilin yhdistää grep- ja pipe-komentoa (klo 13:01 - 26.1.2023)
 
-![Add file: Upload](sl.PNG)
+Hyödyntäen samaa tekstitiedostoa ja käyttämällä komentoa
+
+    $ grep -E -i -w 'hello|duck' hello
+
+  Etsin kaikki hello- ja duck-sanat tekstitiedostosta aakkoslajeja erottamattomasti.
+  
+  ![Add file: Upload](pipe.PNG)
 
 
 
-## Seuraavaksi tutustuin tärkeimpiin kansioihin ja tiedostoihin Linux-käyttöjärjestelmässä (12:08)
-    cd /
-   
-   
-   Komennolla sain esiin juurihakemiston, jonka sisältä töytyy kaikki tiedostot
-   
-    ls 
-    
-   Komento listaa tiedostot ja hakemistot valitussa hakemistossa
-   
-   ![Add file: Upload](root.PNG)
-   
-    cd /home/
-  
-   Komennolla pääsin kotihakemistoon, josta löytyy kaikki käyttäjät. Minun tapauksessa vain oma käyttäjäni.
-   
-   ![Add file: Upload](home.PNG)
-   
-   
-    cd /home/r01
-  
-    
-   Komennoilla pääsin oman käyttäjän hakemistoon
-   
-   ![Add file: Upload](r01.PNG)
-   
-    cd /etc/
-    
-   Komenolla pääsin järjestelmän asetuksiin
-   
-   ![Add file: Upload](etc.PNG)
-   
-    cd /media/
-   
-  Komennolla pääsin siirrettävien tallenusvälineiden hakemistoon
-  
-  ![Add file: Upload](media.PNG)
-  
-    cd /var/log/
-    
-   Komenolla pääsin tarkastelemaan koko järjestelmän lokeja
-   
-  
- ![Add file: Upload](log.PNG)
-  
-  
- ## Grepin testaus 13:01
+
+ ## Lopuksi (klo 13:06 -26.1.2023)
  
- Aloitin tarkistamalla, että minulla on grep käytössä ja sen jälkeen luomalla uuden kansion ja sinne tekstiä nano-editorilla käyttäen komentoja
- 
-    grep
-    $ mkdir testigrep
-    nano hello
-   
- ![Add file: Upload](onkogrep.PNG)    
-
-    
-
-
-
- 
-    grep -c "Hello" hello
-    
-   Komenolla hain lainaismerkkien sisällä olevan sanan lukumäärää kansiossa "hello"
-   
-   
-![Add file: Upload](montagrep.PNG)
-
-    grep -v "Hello" hello
-    
-   Komennolla sain haettua kaikki sanat jotka eivät vastanneet lainausmerkkien sisällä olevaa sanaa
-   
-  
- ![Add file: Upload](greptasma.PNG)
- 
- 
-    grep --color "Hello" hello
-    
- Värjäsin kaikki Hello sanat kyseisessä tiedostossa
- 
- ![Add file: Upload](grepvari.PNG)
- 
- 
- ## Lopuksi (13:43)
- 
- Tässä harjoituksessa opettelin Debian-käyttöjärjestelmän ohjelmistojen ja hakemistojen käyttöä. Vastaan ei tullut ongelmatapauksia.
+ Tässä harjoituksessa tutustuin ilmaisohjelmiin ja avoimen lähdekoodin lisensseihin. Harjoittelin myös grep- ja pipe-komennon käyttöä Linux Debianissa.
  
 ## Lähteet
 
@@ -209,5 +112,5 @@ UNIX Basic commands: grep (https://www.techonthenet.com/unix/basic/grep.php)
 
 
 
-#### Tehnyt Roi Partanen 
+#### Tehnyt Roi Partanen 25.1.2023-26.1.2023
  
