--- a/H3.md
+++ b/H3.md
@@ -21,7 +21,7 @@
 
 * Avoimen lähdekoodin lisenssi hyväksyy kopioimisen, levittämisen ja modifikaation
 * Ohjelmiston lisensointi avoimen lähdekoodin lisenssillä ei kuitenkaan tarkoita, että ohjelma olisi tekijänoikeudeton
-* Avoimen lähdekoodin lisenssillä ei ole lisenssien yhteensopivuuden, takuiden tai muodollisuuksien suhteen vaatimuksia.
+* Avoimen lähdekoodin lisenssillä ei ole lisenssien yhteensopivuuden, takuiden tai muodollisuuksien suhteen vaatimuksia
 
  
  # H3
@@ -42,7 +42,7 @@
 
 
 
-## Aloitin harjoituksen 25.01.2023 kello 20:30 harjoituksessa H2 asentamien ohjelmien lisensseihin tutustumiseen
+## Aloitin harjoituksen 25.01.2023 kello 20:30 Tutustumalla harjoituksessa H2 asentamien ohjelmien lisensseihin 
 
 ### CMatrix
  * Löysin ohjelman github reposition (https://github.com/abishekvashok/cmatrix/blob/master/README.md#license)
@@ -75,7 +75,7 @@
   
     $ grep -i -w 'hello'  hello
     
-  Etsin kaikki hello-sanat tekstitiedostosta aakkoslajeja erottamattomasti.
+  Etsin kaikki hello-sanat tekstitiedostosta aakkoslajeja erottamattomasti
      
   
   ![Add file: Upload](grepP.PNG)
