--- a/H3.md
+++ b/H3.md
@@ -78,7 +78,9 @@
   Etsin kaikki hello-sanat tekstitiedostosta aakkoslajeja erottamattomasti
      
   
-  ![Add file: Upload](grepP.PNG)
+  
+  
+  ![grep](/ss/grepP.png)
 
 
 ## Seuraavaksi kokeilin yhdistää grep- ja pipe-komentoa (klo 13:01 - 26.1.2023)
