--- a/H3.md
+++ b/H3.md
@@ -42,7 +42,7 @@
 
 
 
-## Aloitin harjoituksen 25.01.2023 kello 20:30 Tutustumalla harjoituksessa H2 asentamien ohjelmien lisensseihin 
+## Aloitin harjoituksen 25.01.2023 kello 20:30 Tutustumalla harjoituksessa H2 asentamieni ohjelmien lisensseihin 
 
 ### CMatrix
  * Löysin ohjelman github reposition (https://github.com/abishekvashok/cmatrix/blob/master/README.md#license)
@@ -69,18 +69,17 @@
  
   Luomalla tekstitiedoston 
   
-  ![Add file: Upload](hellogrep.PNG)
+  ![Add file: Upload](/ss/hellogrep.PNG)
   
   ja komentoa 
   
     $ grep -i -w 'hello'  hello
     
   Etsin kaikki hello-sanat tekstitiedostosta aakkoslajeja erottamattomasti
+  
+ ![Add file: Upload](/ss/grepP.PNG)
      
   
-  
-  
-  ![grep](/ss/grepP.png)
 
 
 ## Seuraavaksi kokeilin yhdistää grep- ja pipe-komentoa (klo 13:01 - 26.1.2023)
@@ -91,7 +90,7 @@ Hyödyntäen samaa tekstitiedostoa ja käyttämällä komentoa
 
   Etsin kaikki hello- ja duck-sanat tekstitiedostosta aakkoslajeja erottamattomasti.
   
-  ![Add file: Upload](pipe.PNG)
+  ![Add file: Upload](/ss/pipe.PNG)
 
 
 
