--- a/H3.md
+++ b/H3.md
@@ -71,7 +71,7 @@
   
   ![Add file: Upload](/ss/hellogrep.PNG)
   
-  ja komentoa 
+  ja käyttämällä komentoa 
   
     $ grep -i -w 'hello'  hello
     
