--- a/H3.md
+++ b/H3.md
@@ -103,7 +103,7 @@ Hyödyntäen samaa tekstitiedostoa ja käyttämällä komentoa
 
 What is Free Software? (https://www.gnu.org/philosophy/free-sw.html)
 
-Välimäki 2005: Rise of Open Source: 5 Open Source Licenses as Alternative Governance Mechanisms: 5.1.1 - 5.1.4 (lib.tkk.fi/Diss/2005/isbn9529187793/isbn9529187793.pdf)
+Rise of Open Source: 5 Open Source Licenses as Alternative Governance Mechanisms: 5.1.1 - 5.1.4, Mikko Välimäki - 2005 (lib.tkk.fi/Diss/2005/isbn9529187793/isbn9529187793.pdf)
 
 How To Use grep Command In Linux / UNIX With Practical Examples,  Vivek Gite - 20.1.2023 (https://www.cyberciti.biz/faq/howto-use-grep-command-in-linux-unix/)
 
