--- a/H3.md
+++ b/H3.md
@@ -101,6 +101,8 @@ Hyödyntäen samaa tekstitiedostoa ja käyttämällä komentoa
  
 ## Lähteet
 
+Linux Palvelimet 2023 alkukevät, Tero Karvinen (https://terokarvinen.com/2023/linux-palvelimet-2023-alkukevat/)
+
 What is Free Software? (https://www.gnu.org/philosophy/free-sw.html)
 
 Rise of Open Source: 5 Open Source Licenses as Alternative Governance Mechanisms: 5.1.1 - 5.1.4, Mikko Välimäki - 2005 (lib.tkk.fi/Diss/2005/isbn9529187793/isbn9529187793.pdf)
