--- a/H4.md
+++ b/H4.md
@@ -31,43 +31,42 @@
 
 
 
-## Aloitin harjoituksen 25.01.2023 kello 20:30 Tutustumalla harjoituksessa H2 asentamieni ohjelmien lisensseihin 
+## Aloitin harjoituksen 30.01.2023 kello 14:09 Tutustumalla analysoimalla eri lokeja
 
-### CMatrix
- * Löysin ohjelman github reposition (https://github.com/abishekvashok/cmatrix/blob/master/README.md#license)
- * Lisenssi: GNU GPL v3
- * GNU GPL v3 on vapaa lisenssi
- * Saa käyttää kaupallisesti ja yksityisesti
- * Saa muokata ja jakaa
+Komennolla
+
+    cd /var/log/
+    
+ Pääsin lokeja sisältävään hakemistoon ja komennolla 
  
+    sudo cat syslog
+    
+    
+ Pääsin tarkastelemaan lokeja
 
-### Cowsay
- * Löysin ohjelman github reposition (https://github.com/tnalpgge/rank-amateur-cowsay)
- * Lisenssi: GNU GPL v3
- * GNU GPL v3 on vapaa lisenssi
- * Saa käyttää kaupallisesti ja yksityisesti
- * Saa muokata ja jakaa
 
-### SL
-  * Löysin ohjelman github reposition (https://github.com/mtoyoda/sl)
-  * Copyright 1993,1998,2014 Toyoda Masashi (mtoyoda@acm.org)
-  * Annetaan lupa kopioida, levittää ja muokata ohjelmaa
+
+### /var/log/syslog 
+
+ ![Add file: Upload](/ss/syslog.PNG)
+ 
+Ensiksi lokissa näkyy päivämäärä ja aika, mitkä vastaavat nykyistä aikaa ja päivämäärää (30.1.2023 UTC+2). Seuraavaksi lokissa on listattu tietokoneen nimi. systemd[1] on ilmeisesti demoni, minkä avulla määritetään tietokoneen nimi. Lokissa kerrotaan kyseisen demonin käynnistyneen.
+ 
   
 
- ## Seuraavaksi harjoittelin grep-komentoa käyttäen säännöllisiä lausekkeita (regular expressions) (klo 12:54 - 26.1.2023)
+### /var/log/auth.log
+  
+![Add file: Upload](/ss/authlog.PNG) 
+
+Ensiksi lokissa näkyy päivämäärä ja aika, mitkä vastaavat nykyistä aikaa ja päivämäärää (30.1.2023 UTC+2). Sen jälkeen lokissa näkyy tietokoneen nimi ja sudo, eli on yritetty käyttää adminryhmään kuuluvan oikeuksia. Pam_unixia käytetään todentamaan käyttäjä. Tässä lokissa kuitenkin ilmoitetaan, että todentaminen on epäonnistunut.
  
-  Luomalla tekstitiedoston 
+
+ ## /var/log/apache2/access.log
+ 
   
   ![Add file: Upload](/ss/hellogrep.PNG)
   
-  ja käyttämällä komentoa 
-  
-    $ grep -i -w 'hello'  hello
-    
-  Etsin kaikki hello-sanat tekstitiedostosta aakkoslajeja erottamattomasti
-  
- ![Add file: Upload](/ss/grepP.PNG)
-     
+
   
 
 
