--- a/H4.md
+++ b/H4.md
@@ -66,21 +66,15 @@ Ensiksi lokissa näkyy päivämäärä ja aika, mitkä vastaavat nykyistä aikaa
   
   ![Add file: Upload](/ss/hellogrep.PNG)
   
-
+Ensiksi lokissa näkyy ip-osoite. ja sen jälkeen päivämäärä ja aika, sekä aikavyöhyke oikeassa muodossa. Tämän jälkeen on ilmeisesti yritetty hakea faviconia, mikä on siis pieni kuvake, joka näkyy nettisivun yhteydessä. 404 487 tarkoittaa taas, että pyyntö on terminoitu. Tämän jälkeen on listattu sivuston osoite ja sen jälkeen tietoa käytössä olevasta Mozilla Firefox-selaimesta mm. versionumero 102.0.
   
 
 
-## Seuraavaksi kokeilin yhdistää grep- ja pipe-komentoa (klo 13:01 - 26.1.2023)
+## /var/log/apache2/error.log
 
-Hyödyntäen samaa tekstitiedostoa ja käyttämällä komentoa
+![Add file: Upload](/ss/hellogrep.PNG)
 
-    $ grep -E -i -w 'hello|duck' hello
-
-  Etsin kaikki hello- ja duck-sanat tekstitiedostosta aakkoslajeja erottamattomasti.
-  
-  ![Add file: Upload](/ss/pipe.PNG)
-
-
+Ensiksi lokissa näkyi päivämäärä ja kellon aika. Seuraavaksi lokissa oli listattu tapahtuman tyyppi (tässä tapauksessa ilmoitus). Seuraavaksi lokissa oli listattu thread- ja prosessi-id:t (TID ja PID). Lopuksi loki ilmoitti, että Apache versio 2.4.54 debianille on konfiguroitu ja toimenpiteet jatkuvat normaalisti.
 
 
  ## Lopuksi (klo 13:06 -26.1.2023)
