--- a/H4.md
+++ b/H4.md
@@ -77,6 +77,19 @@ Ensiksi lokissa näkyy ip-osoite. ja sen jälkeen päivämäärä ja aika, sekä
 Ensiksi lokissa näkyi päivämäärä ja kellon aika. Seuraavaksi lokissa oli listattu tapahtuman tyyppi (tässä tapauksessa ilmoitus). Seuraavaksi lokissa oli listattu thread- ja prosessi-id:t (TID ja PID). Lopuksi loki ilmoitti, että Apache versio 2.4.54 debianille on konfiguroitu ja toimenpiteet jatkuvat normaalisti.
 
 
+## Kaks eri tapahtumaa Apache2-lokiin
+
+Ensimmäisen epäonnistunut tapahtuman sain aikaiseksi kirjoittamalla selaimeen localhost/login
+
+![Add file: Upload](/ss/apafail.PNG)
+
+Minkä jälkeen /var/log/apache2/error.log kirjasi tapahtuman seuraavanlaisesti.
+
+![Add file: Upload](/ss/omaerror.PNG)
+
+
+
+
  ## Lopuksi (klo 13:06 -26.1.2023)
  
  Tässä harjoituksessa tutustuin ilmaisohjelmiin ja avoimen lähdekoodin lisensseihin. Harjoittelin myös grep- ja pipe-komennon käyttöä Linux Debianissa.
