--- a/H4.md
+++ b/H4.md
@@ -79,7 +79,7 @@ Ensiksi lokissa näkyi päivämäärä ja kellon aika. Seuraavaksi lokissa oli l
 
 ## Kaks eri tapahtumaa Apache2-lokiin
 
-Ensimmäisen epäonnistunut tapahtuman sain aikaiseksi kirjoittamalla selaimeen localhost/login
+Ensimmäisen epäonnistuneen tapahtuman sain aikaiseksi kirjoittamalla selaimeen "localhost/login"
 
 ![Add file: Upload](/ss/apafail.PNG)
 
@@ -88,9 +88,16 @@ Minkä jälkeen /var/log/apache2/error.log kirjasi tapahtuman seuraavanlaisesti.
 ![Add file: Upload](/ss/omaerror.PNG)
 
 
+Ensiksi lokissa näkyy ip-osoite. ja sen jälkeen päivämäärä ja aika, sekä aikavyöhyke oikeassa muodossa. Tämän jälkeen on yritetty hakea kirjoitettua osoitetta, mikä antoi virhekoodin 404 488, joka tarkoittaa, että kyseinen pyyntö ei ole löydettävissä tai hyväksyttävissä täällä. Tämän jälkeen on listattu sivuston osoite ja sen jälkeen tietoa käytössä olevasta Mozilla Firefox-selaimesta mm. versionumero 102.0.
+
+Seuraavan onnistuneen tapahtuman sain aikaiseksi kirjoittamalla selaimeen pelkästään "localhost"
+
+![Add file: Upload](/ss/omaok.PNG)
+
+nsiksi lokissa näkyy ip-osoite. ja sen jälkeen päivämäärä ja aika, sekä aikavyöhyke oikeassa muodossa. Tämän jälkeen on yritetty hakea kirjoitettua osoitetta, mikä antoi virhekoodin 404 488, joka tarkoittaa, että kyseinen pyyntö ei ole löydettävissä tai hyväksyttävissä täällä. Tämän jälkeen on listattu sivuston osoite ja sen jälkeen tietoa käytössä olevasta Mozilla Firefox-selaimesta mm. versionumero 102.0.
 
 
- ## Lopuksi (klo 13:06 -26.1.2023)
+ ## Lopuksi 
  
  Tässä harjoituksessa tutustuin ilmaisohjelmiin ja avoimen lähdekoodin lisensseihin. Harjoittelin myös grep- ja pipe-komennon käyttöä Linux Debianissa.
  
