--- a/H4.md
+++ b/H4.md
@@ -64,7 +64,7 @@ Ensiksi lokissa näkyy päivämäärä ja aika, mitkä vastaavat nykyistä aikaa
  ## /var/log/apache2/access.log
  
   
-  ![Add file: Upload](/ss/hellogrep.PNG)
+  ![Add file: Upload](/ss/apacheascces.PNG)
   
 Ensiksi lokissa näkyy ip-osoite. ja sen jälkeen päivämäärä ja aika, sekä aikavyöhyke oikeassa muodossa. Tämän jälkeen on ilmeisesti yritetty hakea faviconia, mikä on siis pieni kuvake, joka näkyy nettisivun yhteydessä. 404 487 tarkoittaa taas, että pyyntö on terminoitu. Tämän jälkeen on listattu sivuston osoite ja sen jälkeen tietoa käytössä olevasta Mozilla Firefox-selaimesta mm. versionumero 102.0.
   
@@ -72,7 +72,7 @@ Ensiksi lokissa näkyy ip-osoite. ja sen jälkeen päivämäärä ja aika, sekä
 
 ## /var/log/apache2/error.log
 
-![Add file: Upload](/ss/hellogrep.PNG)
+![Add file: Upload](/ss/apacheerror.PNG)
 
 Ensiksi lokissa näkyi päivämäärä ja kellon aika. Seuraavaksi lokissa oli listattu tapahtuman tyyppi (tässä tapauksessa ilmoitus). Seuraavaksi lokissa oli listattu thread- ja prosessi-id:t (TID ja PID). Lopuksi loki ilmoitti, että Apache versio 2.4.54 debianille on konfiguroitu ja toimenpiteet jatkuvat normaalisti.
 
