--- a/H4.md
+++ b/H4.md
@@ -58,7 +58,7 @@ Ensiksi lokissa näkyy päivämäärä ja aika, mitkä vastaavat nykyistä aikaa
   
 ![Add file: Upload](/ss/authlog.PNG) 
 
-Ensiksi lokissa näkyy päivämäärä ja aika, mitkä vastaavat nykyistä aikaa ja päivämäärää (30.1.2023 UTC+2). Sen jälkeen lokissa näkyy tietokoneen nimi ja sudo, eli on yritetty käyttää adminryhmään kuuluvan oikeuksia. Pam_unixia käytetään todentamaan käyttäjä. Tässä lokissa kuitenkin ilmoitetaan, että todentaminen on epäonnistunut.
+Ensiksi lokissa näkyy päivämäärä ja aika, mitkä vastaavat nykyistä aikaa ja päivämäärää (30.1.2023 UTC+2). Sen jälkeen lokissa näkyy tietokoneen nimi ja sudo-komento, eli on yritetty käyttää adminryhmään kuuluvien oikeuksia. Pam_unixia käytetään todentamaan käyttäjä. Tässä lokissa kuitenkin ilmoitetaan, että todentaminen on epäonnistunut.
  
 
  ## /var/log/apache2/access.log
@@ -66,7 +66,7 @@ Ensiksi lokissa näkyy päivämäärä ja aika, mitkä vastaavat nykyistä aikaa
   
   ![Add file: Upload](/ss/apacheacces.PNG)
   
-Ensiksi lokissa näkyy ip-osoite. ja sen jälkeen päivämäärä ja aika, sekä aikavyöhyke oikeassa muodossa. Tämän jälkeen on ilmeisesti yritetty hakea faviconia, mikä on siis pieni kuvake, joka näkyy nettisivun yhteydessä. 404 487 tarkoittaa taas, että pyyntö on terminoitu. Tämän jälkeen on listattu sivuston osoite ja sen jälkeen tietoa käytössä olevasta Mozilla Firefox-selaimesta mm. versionumero 102.0.
+Ensiksi lokissa näkyy ip-osoite. ja sen jälkeen päivämäärä ja aika, sekä aikavyöhyke oikeassa muodossa. Tämän jälkeen on ilmeisesti yritetty hakea faviconia, mikä on siis pieni kuvake, joka näkyy nettisivun yhteydessä. 404 487 tarkoittaa taas, että pyyntö on terminoitu joko käyttäjän tai sovelluksen toimesta. Tämän jälkeen on listattu sivuston osoite ja sen jälkeen tietoa käytössä olevasta Mozilla Firefox-selaimesta mm. versionumero 102.0.
   
 
 
@@ -74,7 +74,7 @@ Ensiksi lokissa näkyy ip-osoite. ja sen jälkeen päivämäärä ja aika, sekä
 
 ![Add file: Upload](/ss/apacheerror.PNG)
 
-Ensiksi lokissa näkyi päivämäärä ja kellon aika. Seuraavaksi lokissa oli listattu tapahtuman tyyppi (tässä tapauksessa ilmoitus). Seuraavaksi lokissa oli listattu thread- ja prosessi-id:t (TID ja PID). Lopuksi loki ilmoitti, että Apache versio 2.4.54 debianille on konfiguroitu ja toimenpiteet jatkuvat normaalisti.
+Ensiksi lokissa näkyi päivämäärä ja kellon aika oikeassa muodossa. Seuraavaksi lokissa oli listattu tapahtuman tyyppi (tässä tapauksessa ilmoitus). Seuraavaksi lokissa oli listattu thread- ja prosessi-id:t (TID ja PID). Lopuksi loki ilmoitti, että Apache versio 2.4.54 debianille on konfiguroitu ja toimenpiteet jatkuvat normaalisti.
 
 
 ## Kaksi eri tapahtumaa Apache2-lokiin
@@ -94,27 +94,20 @@ Seuraavan onnistuneen tapahtuman sain aikaiseksi kirjoittamalla selaimeen pelkä
 
 ![Add file: Upload](/ss/omaok.PNG)
 
-nsiksi lokissa näkyy ip-osoite. ja sen jälkeen päivämäärä ja aika, sekä aikavyöhyke oikeassa muodossa. Tämän jälkeen on yritetty hakea kirjoitettua osoitetta, mikä antoi virhekoodin 404 488, joka tarkoittaa, että kyseinen pyyntö ei ole löydettävissä tai hyväksyttävissä täällä. Tämän jälkeen on listattu sivuston osoite ja sen jälkeen tietoa käytössä olevasta Mozilla Firefox-selaimesta mm. versionumero 102.0.
+Ensiksi lokissa näkyy ip-osoite. ja sen jälkeen päivämäärä ja aika, sekä aikavyöhyke oikeassa muodossa. Tämän jälkeen on yritetty hakea kirjoitettua osoitetta (localhost), mikä onnistui. Tämän jälkeen on listattu sivuston osoite ja sen jälkeen tietoa käytössä olevasta Mozilla Firefox-selaimesta mm. versionumero 102.0.
 
 
  ## Lopuksi 
  
- Tässä harjoituksessa tutustuin ilmaisohjelmiin ja avoimen lähdekoodin lisensseihin. Harjoittelin myös grep- ja pipe-komennon käyttöä Linux Debianissa.
+ Tässä harjoituksessa tutustuin YCombinator Hacker News foorumiin ja komentorivin liitäntään. Lisäksi tutustuin erillaisiin lokeihin. Harjoituksessa hankaluuksia tuotti eri lokien esille saaminen ja tulkitseminen.
  
 ## Lähteet
 
+
 Linux Palvelimet 2023 alkukevät, Tero Karvinen (https://terokarvinen.com/2023/linux-palvelimet-2023-alkukevat/)
 
-What is Free Software? (https://www.gnu.org/philosophy/free-sw.html)
+YCombinator Hacker News artikkeli aiheesta Command Line Interface Guidelines (https://news.ycombinator.com/item?id=25304257)
 
-Rise of Open Source: 5 Open Source Licenses as Alternative Governance Mechanisms: 5.1.1 - 5.1.4, Mikko Välimäki - 2005 (lib.tkk.fi/Diss/2005/isbn9529187793/isbn9529187793.pdf)
-
-How To Use grep Command In Linux / UNIX With Practical Examples,  Vivek Gite - 20.1.2023 (https://www.cyberciti.biz/faq/howto-use-grep-command-in-linux-unix/)
-
-11 Fun Linux Command-Line Programs You Should Try When Bored, Deepesh Sharma - 1.11.2022 (https://www.makeuseof.com/fun-linux-command-line-programs/)
-
-UNIX Basic commands: grep (https://www.techonthenet.com/unix/basic/grep.php)
-
-
+Command Line Interface Guidelines, Aanand Prasad, Ben Firshman, Carl Tashian, Eva Parish, Mark Hurrell (https://clig.dev/)
 
 #### Tehnyt Roi Partanen 30.1.2023
