--- a/H4.md
+++ b/H4.md
@@ -6,7 +6,7 @@
  
 ## 	CLI Guidelines – A guide to help you write better command-line programs (https://news.ycombinator.com/item?id=25304257)
 
-  Artikkeli käsittelee ohjetta, joka auttaa kirjoittamaan parempia komentoliittymiä Ohjeen sivu : (https://clig.dev/)
+  Artikkeli käsittelee ohjetta, joka auttaa kirjoittamaan parempia komentoliittymiä. Ohjeen sivu : (https://clig.dev/)
  
 * Tarkoituksena tehdä selkeämpiä komentoliittymiä
 * Artikkeli jakaa mielipiteitä mm. man-sivujen tärkeydestä ja niiden korvaamisesta paremmilla help-komennoilla
