--- a/H4.md
+++ b/H4.md
@@ -8,7 +8,7 @@
 
   Artikkeli käsittelee ohjetta, joka auttaa kirjoittamaan parempia komentoliittymiä. Ohjeen sivu : (https://clig.dev/)
  
-* Tarkoituksena tehdä selkeämpiä komentoliittymiä
+* Tarkoituksena tehdä selkeämpiä ja helppokäyttöisempiä komentoliittymiä
 * Artikkeli jakaa mielipiteitä mm. man-sivujen tärkeydestä ja niiden korvaamisesta paremmilla help-komennoilla
 * Emojien ja symbolien käyttöä tekstin sijasta vastustetaan kovasti selkeyden vuoksi
 
