--- a/H4.md
+++ b/H4.md
@@ -50,7 +50,7 @@ Komennolla
 
  ![Add file: Upload](/ss/syslog.PNG)
  
-Ensiksi lokissa näkyy päivämäärä ja aika, mitkä vastaavat nykyistä aikaa ja päivämäärää (30.1.2023 UTC+2). Seuraavaksi lokissa on listattu tietokoneen nimi. systemd[1] on ilmeisesti demoni, minkä avulla määritetään tietokoneen nimi. Lokissa kerrotaan kyseisen demonin käynnistyneen.
+Ensiksi lokissa näkyy päivämäärä ja aika, mitkä vastaavat nykyistä aikaa ja päivämäärää (30.1.2023 UTC+2). Seuraavaksi lokissa on listattu tietokoneen nimi. Systemd[1] on ilmeisesti demoni, minkä avulla määritetään tietokoneen nimi. Lokissa kerrotaan kyseisen demonin käynnistyneen.
  
   
 
@@ -58,7 +58,7 @@ Ensiksi lokissa näkyy päivämäärä ja aika, mitkä vastaavat nykyistä aikaa
   
 ![Add file: Upload](/ss/authlog.PNG) 
 
-Ensiksi lokissa näkyy päivämäärä ja aika, mitkä vastaavat nykyistä aikaa ja päivämäärää (30.1.2023 UTC+2). Sen jälkeen lokissa näkyy tietokoneen nimi ja sudo-komento, eli on yritetty käyttää adminryhmään kuuluvien oikeuksia. Pam_unixia käytetään todentamaan käyttäjä. Tässä lokissa kuitenkin ilmoitetaan, että todentaminen on epäonnistunut.
+Ensiksi lokissa näkyy päivämäärä ja aika, mitkä vastaavat nykyistä aikaa ja päivämäärää (30.1.2023 UTC+2). Sen jälkeen lokissa näkyy tietokoneen nimi ja sudo-komento, eli on yritetty käyttää adminryhmään kuuluvien oikeuksia. Pam_unixia käytetään todentamaan käyttäjä. Tässä lokissa kuitenkin ilmoitetaan, että todentaminen on epäonnistunut. Lopussa listatataan ilmeisesti eri parametrejä liittyen tapahtumaan.
  
 
  ## /var/log/apache2/access.log
@@ -66,7 +66,7 @@ Ensiksi lokissa näkyy päivämäärä ja aika, mitkä vastaavat nykyistä aikaa
   
   ![Add file: Upload](/ss/apacheacces.PNG)
   
-Ensiksi lokissa näkyy ip-osoite. ja sen jälkeen päivämäärä ja aika, sekä aikavyöhyke oikeassa muodossa. Tämän jälkeen on ilmeisesti yritetty hakea faviconia, mikä on siis pieni kuvake, joka näkyy nettisivun yhteydessä. 404 487 tarkoittaa taas, että pyyntö on terminoitu joko käyttäjän tai sovelluksen toimesta. Tämän jälkeen on listattu sivuston osoite ja sen jälkeen tietoa käytössä olevasta Mozilla Firefox-selaimesta mm. versionumero 102.0.
+Ensiksi lokissa näkyy ip-osoite. Sen jälkeen päivämäärä ja aika, sekä aikavyöhyke oikeassa muodossa. Tämän jälkeen on ilmeisesti yritetty hakea faviconia, mikä on siis pieni kuvake, joka näkyy nettisivun yhteydessä. 404 487 tarkoittaa taas, että pyyntö on terminoitu joko käyttäjän tai sovelluksen toimesta. Tämän jälkeen on listattu sivuston osoite ja sen jälkeen tietoa käytössä olevasta Mozilla Firefox-selaimesta mm. versionumero 102.0.
   
 
 
