--- a/H4.md
+++ b/H4.md
@@ -77,7 +77,7 @@ Ensiksi lokissa näkyy ip-osoite. Sen jälkeen päivämäärä ja aika, sekä ai
 Ensiksi lokissa näkyi päivämäärä ja kellon aika oikeassa muodossa. Seuraavaksi lokissa oli listattu tapahtuman tyyppi (tässä tapauksessa ilmoitus). Seuraavaksi lokissa oli listattu thread- ja prosessi-id:t (TID ja PID). Lopuksi loki ilmoitti, että Apache versio 2.4.54 debianille on konfiguroitu ja toimenpiteet jatkuvat normaalisti.
 
 
-## Kaksi eri tapahtumaa Apache2-lokiin
+## Kaksi eri tapahtumaa Apache2-lokiin (17:10)
 
 Ensimmäisen epäonnistuneen tapahtuman sain aikaiseksi kirjoittamalla selaimeen "localhost/login"
 
@@ -99,7 +99,7 @@ Ensiksi lokissa näkyy ip-osoite. ja sen jälkeen päivämäärä ja aika, sekä
 
  ## Lopuksi 
  
- Tässä harjoituksessa tutustuin YCombinator Hacker News foorumiin ja komentorivin liitäntään. Lisäksi tutustuin erillaisiin lokeihin. Harjoituksessa hankaluuksia tuotti eri lokien esille saaminen ja tulkitseminen.
+ Tässä harjoituksessa tutustuin YCombinator Hacker News foorumiin ja komentorivin liitäntään. Lisäksi tutustuin erillaisiin lokeihin. Harjoituksessa hankaluuksia tuotti eri lokien esille saaminen ja tulkitseminen. Harjoitus tehtiin 30.1.2023 aikavälillä 14:09-17:22.
  
 ## Lähteet
 
