--- a/H5.md
+++ b/H5.md
@@ -13,8 +13,8 @@
 * Emojien ja symbolien käyttöä tekstin sijasta vastustetaan kovasti selkeyden vuoksi
 
 
- # H4
- Harjoituksen tarkoituksena on tutustua linux-käyttöjärjestelmän lokeihin. Tein harjoituksen omalla pöytäkoneella 30.1.2023
+ # H5
+ Harjoituksen tarkoituksena on tutustua apache-serverin nettisivujen toimintaan. Tein harjoituksen omalla pöytäkoneella 02.02.2023
  
 
  
@@ -31,28 +31,47 @@
 
 
 
-## Aloitin harjoituksen 30.01.2023 kello 14:09 Tutustumalla analysoimalla eri lokeja
+## Apachen esimerkkisivun vaihtaminen (0:19)
 
-Komennolla
+Aluksi tarkistin, että Apache on käynnissä komennolla 
 
-    cd /var/log/
+    $ sudo systemctl status apache2	
     
- Pääsin lokeja sisältävään hakemistoon ja komennolla 
+![Add file: Upload](/ss/aparun.PNG)
  
-    sudo cat syslog
+   Apache on käynnissä.
     
+ Seuraavaksi vaihdoin Apachen esimerkkisivun käyttäen komentoa
+   
+    $ echo Go away | sudo tee /var/www/html/index.html
     
- Pääsin tarkastelemaan lokeja
+ ![Add file: Upload](/ss/goaway.PNG)   
 
 
+## Käyttäjän kotisivut (0:39)
 
-### /var/log/syslog 
+Ensiksi tarkistin käyttäjän nimen komennolla
 
- ![Add file: Upload](/ss/syslog.PNG)
- 
-Ensiksi lokissa näkyy päivämäärä ja aika, mitkä vastaavat nykyistä aikaa ja päivämäärää (30.1.2023 UTC+2). Seuraavaksi lokissa on listattu tietokoneen nimi. Systemd[1] on ilmeisesti demoni, minkä avulla määritetään tietokoneen nimi. Lokissa kerrotaan kyseisen demonin käynnistyneen.
- 
+    $ whoami
+    
+  ![Add file: Upload](/ss/whoami.PNG)  
   
+  Seuraavaksi loin käyttäjälle public_html kansion käyttäen komentoa 
+  
+    $ mkdir public_html
+    
+  Ja lisäsin sinne index.html tiedoston hyödyntäen nano editoria ja käyttäen Tero Karvisen esimerkki HTML5 sivua (https://terokarvinen.com/2012/short-html5-page/)
+  
+  ![Add file: Upload](/ss/nanopage.PNG) 
+  
+  Lopuksi tarkistin sivun toimivuuden komennolla
+  
+     $ curl 'http://localhost/~r01/'
+     
+  ![Add file: Upload](/ss/curltesti.PNG) 
+  
+  ![Add file: Upload](/ss/thundertesti.PNG) 
+ 
 
 ### /var/log/auth.log
   
