--- a/H5.md
+++ b/H5.md
@@ -60,7 +60,9 @@ Ensiksi tarkistin käyttäjän nimen komennolla
   
     $ mkdir public_html
     
-  Ja lisäsin sinne index.html tiedoston hyödyntäen nano editoria ja käyttäen Tero Karvisen esimerkki HTML5 sivua (https://terokarvinen.com/2012/short-html5-page/)
+  Ja lisäsin sinne index.html tiedoston hyödyntäen nano editoria ja käyttäen Tero Karvisen esimerkki HTML5 sivua pohjana (https://terokarvinen.com/2012/short-html5-page/) komennolla
+  
+     $ nano index.html
   
   ![Add file: Upload](/ss/nanopage.PNG) 
   
@@ -73,7 +75,7 @@ Ensiksi tarkistin käyttäjän nimen komennolla
   ![Add file: Upload](/ss/thundertesti.PNG) 
  
 
-### /var/log/auth.log
+## Uuden käyttäjän luominen (1:07)
   
 ![Add file: Upload](/ss/authlog.PNG) 
 
@@ -125,8 +127,6 @@ Ensiksi lokissa näkyy ip-osoite. ja sen jälkeen päivämäärä ja aika, sekä
 
 Linux Palvelimet 2023 alkukevät, Tero Karvinen (https://terokarvinen.com/2023/linux-palvelimet-2023-alkukevat/)
 
-YCombinator Hacker News artikkeli aiheesta Command Line Interface Guidelines (https://news.ycombinator.com/item?id=25304257)
-
-Command Line Interface Guidelines, Aanand Prasad, Ben Firshman, Carl Tashian, Eva Parish, Mark Hurrell (https://clig.dev/)
+Short HTML5 page, Tero Karvinen - 12.2.2012 (https://terokarvinen.com/2012/short-html5-page/)
 
 #### Tehnyt Roi Partanen 30.1.2023
