--- a/H5.md
+++ b/H5.md
@@ -77,10 +77,46 @@ Ensiksi tarkistin käyttäjän nimen komennolla
 
 ## Uuden käyttäjän luominen (1:07)
   
-![Add file: Upload](/ss/authlog.PNG) 
+Aloitin luomalla uuden käyttäjän komennolla
 
-Ensiksi lokissa näkyy päivämäärä ja aika, mitkä vastaavat nykyistä aikaa ja päivämäärää (30.1.2023 UTC+2). Sen jälkeen lokissa näkyy tietokoneen nimi ja sudo-komento, eli on yritetty käyttää adminryhmään kuuluvien oikeuksia. Pam_unixia käytetään todentamaan käyttäjä. Tässä lokissa kuitenkin ilmoitetaan, että todentaminen on epäonnistunut. Lopussa listatataan ilmeisesti eri parametrejä liittyen tapahtumaan.
+    $ sudo adduser Testr01
  
+Kohtasin seuraavanlaisen ongelman
+
+ ![Add file: Upload](/ss/ongelma.PNG) 
+ 
+ Googlettamalla löysin mahdollisen syyn, mikä oli ison alkukirjaimen käyttö. Kokeilin uudella nimellä 'testr01' ja käyttäjän luominen onnistui.
+ 
+ Seuraavaksi vaihdoin käyttäjää komennolla
+ 
+    $ su testr01
+    
+ Ja tarkistin että käyttäjä vaihtui komennolla
+ 
+    $ whoami
+    
+  ![Add file: Upload](/ss/whoamitest.PNG)   
+  
+ Tarkistin myös, että apache on toiminassa vielä käyttäen tällä kertaa komentoa 
+ 
+    $  curl 'http://localhost'
+  
+ Sillä en ollut lisännyt uutta käyttäjälle sudo oikeuksia
+ 
+ Seuraavaksi loin testr01-käyttäjälle omat sivut käyttäen samoja komentoja kuin aikaisemmin ja hyödyntäen samaa HTML5 pohjaa.
+ 
+    $ mkdir public_html
+    
+    $ nano index.html
+    
+  ![Add file: Upload](/ss/testr01page.PNG)  
+  
+  Tarkistin sivujen toimivuuden komennolla
+  
+     $ curl 'http://localhost/~testr01/'
+     
+  ![Add file: Upload](/ss/curltestr01.PNG)   
+     
 
  ## /var/log/apache2/access.log
  
