--- a/H5.md
+++ b/H5.md
@@ -118,40 +118,17 @@ Kohtasin seuraavanlaisen ongelman
   ![Add file: Upload](/ss/curltestr01.PNG)   
      
 
- ## /var/log/apache2/access.log
+ ## Validi HTML5 sivu (1:37)
  
+  Tarkistin testr01-käyttäjän oman sivun w3:n validaattorilla (https://validator.w3.org/)
+ 
+  ![Add file: Upload](/ss/validointiw3.PNG) 
   
-  ![Add file: Upload](/ss/apacheacces.PNG)
+  Sain huomautuksen kieli attribuutin puuttumisesta. Lisäsin sen vielä.
   
-Ensiksi lokissa näkyy ip-osoite. Sen jälkeen päivämäärä ja aika, sekä aikavyöhyke oikeassa muodossa. Tämän jälkeen on ilmeisesti yritetty hakea faviconia, mikä on siis pieni kuvake, joka näkyy nettisivun yhteydessä. 404 487 tarkoittaa taas, että pyyntö on terminoitu joko käyttäjän tai sovelluksen toimesta. Tämän jälkeen on listattu sivuston osoite ja sen jälkeen tietoa käytössä olevasta Mozilla Firefox-selaimesta mm. versionumero 102.0.
   
+![Add file: Upload](/ss/muutettutestr01.PNG) 
 
-
-## /var/log/apache2/error.log
-
-![Add file: Upload](/ss/apacheerror.PNG)
-
-Ensiksi lokissa näkyi päivämäärä ja kellon aika oikeassa muodossa. Seuraavaksi lokissa oli listattu tapahtuman tyyppi (tässä tapauksessa ilmoitus). Seuraavaksi lokissa oli listattu thread- ja prosessi-id:t (TID ja PID). Lopuksi loki ilmoitti, että Apache versio 2.4.54 debianille on konfiguroitu ja toimenpiteet jatkuvat normaalisti.
-
-
-## Kaksi eri tapahtumaa Apache2-lokiin (17:10)
-
-Ensimmäisen epäonnistuneen tapahtuman sain aikaiseksi kirjoittamalla selaimeen "localhost/login"
-
-![Add file: Upload](/ss/apafail.PNG)
-
-Minkä jälkeen /var/log/apache2/error.log kirjasi tapahtuman seuraavanlaisesti.
-
-![Add file: Upload](/ss/omaerror.PNG)
-
-
-Ensiksi lokissa näkyy ip-osoite. ja sen jälkeen päivämäärä ja aika, sekä aikavyöhyke oikeassa muodossa. Tämän jälkeen on yritetty hakea kirjoitettua osoitetta, mikä antoi virhekoodin 404 488, joka tarkoittaa, että kyseinen pyyntö ei ole löydettävissä tai hyväksyttävissä täällä. Tämän jälkeen on listattu sivuston osoite ja sen jälkeen tietoa käytössä olevasta Mozilla Firefox-selaimesta mm. versionumero 102.0.
-
-Seuraavan onnistuneen tapahtuman sain aikaiseksi kirjoittamalla selaimeen pelkästään "localhost"
-
-![Add file: Upload](/ss/omaok.PNG)
-
-Ensiksi lokissa näkyy ip-osoite. ja sen jälkeen päivämäärä ja aika, sekä aikavyöhyke oikeassa muodossa. Tämän jälkeen on yritetty hakea kirjoitettua osoitetta (localhost), mikä onnistui. Tämän jälkeen on listattu sivuston osoite ja sen jälkeen tietoa käytössä olevasta Mozilla Firefox-selaimesta mm. versionumero 102.0.
 
 
  ## Lopuksi 
