--- a/H5.md
+++ b/H5.md
@@ -14,7 +14,7 @@
 
 
  # H5
- Harjoituksen tarkoituksena on tutustua apache-serverin nettisivujen toimintaan. Tein harjoituksen omalla pöytäkoneella 02.02.2023
+ Harjoituksen tarkoituksena on tutustua apache-serverin nettisivujen toimintaan ja niiden luomiseen. Tein harjoituksen omalla pöytäkoneella 02.02.2023
  
 
  
