--- a/H5.md
+++ b/H5.md
@@ -4,9 +4,13 @@
  
  
  
-## 	CLI Guidelines – A guide to help you write better command-line programs (https://news.ycombinator.com/item?id=25304257)
+## 	#265 From Full-Time Job to $30k/Month with Damon Chen of Testimonial (https://share.transistor.fm/s/cc6dba56)
 
-  Artikkeli käsittelee ohjetta, joka auttaa kirjoittamaan parempia komentoliittymiä. Ohjeen sivu : (https://clig.dev/)
+  Indie Hackers-podcastin episodi 265 käsittelee 
+  
+* Damon Chen perusti Testimonialin vuonna 2020
+* Testimonial antaa työkalut nettisivuille esitellä eri asiakkaiden tai käyttäjien suosituksia ja kokemuksia tekstien ja videoiden avulla
+* 
  
 * Tarkoituksena tehdä selkeämpiä ja helppokäyttöisempiä komentoliittymiä
 * Artikkeli jakaa mielipiteitä mm. man-sivujen tärkeydestä ja niiden korvaamisesta paremmilla help-komennoilla
