--- a/H5.md
+++ b/H5.md
@@ -9,8 +9,8 @@
   Indie Hackers-podcastin episodi 265 käsittelee 
   
 * Damon Chen perusti Testimonialin vuonna 2020
-* Testimonial antaa työkalut nettisivuille esitellä eri asiakkaiden tai käyttäjien suosituksia ja kokemuksia tekstien ja videoiden avulla
-* 
+* Testimonial on työkalu jonka avulla nettisivut voivat esitellä eri asiakkaiden tai käyttäjien suosituksia ja kokemuksia tekstien ja videoiden avulla
+* Terstimonialin käyttö ei vaadi erityistä teknistäosaamista
  
 * Tarkoituksena tehdä selkeämpiä ja helppokäyttöisempiä komentoliittymiä
 * Artikkeli jakaa mielipiteitä mm. man-sivujen tärkeydestä ja niiden korvaamisesta paremmilla help-komennoilla
