--- a/H5.md
+++ b/H5.md
@@ -9,6 +9,7 @@
   Indie Hackers-podcastin episodi 265 käsittelee 
   
 * Damon Chen perusti Testimonialin vuonna 2020
+* Toiminut aiemmin mm. uber-kuljettajana
 * Testimonial on työkalu jonka avulla nettisivut voivat esitellä eri asiakkaiden tai käyttäjien suosituksia ja kokemuksia tekstien ja videoiden avulla
 * Terstimonialin käyttö ei vaadi erityistä teknistäosaamista
  
